Inherit stdout, stderr to child process
Avoids filled buffers (of some sort)